<resources>
    <string name="app_name">MeetEz</string>
    <string name="backout">Back out</string>
    <string name="create_event">Create Event</string>
    <string name="location_gen">Location Generator</string>
    <string name="participants">Participants</string>
    <string name="editparticipants">Edit Participants</string>
    <string name="participantName">Participant 1</string>
    <string name="addParticipant">Add Participant</string>
    <string name="delete">Delete</string>

    <!-- Create Event / Description -->
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="venue">Venue :</string>
    <string name="description">Description :</string>
    <string name="join">Join</string>
    <string name="eventName">Name of Event :</string>

    <!-- Dialog box -->
    <string name="newusername">Welcome to MeetEz! Please input your name:</string>
    <string name="newuserphone">Also, please input your phone number:</string>
    <string name="okay">OK</string>

    <!-- Dashboard Activity -->
    <string name="noevents">You have no events!</string>

    <!-- AdHocMeeting Activity -->
    <string name="adhocpax">Choose the number of people attending the meeting:</string>
    <string name="choosenumber">--Please choose--</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
</resources>
