<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meetingevent"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border"
        />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/date"
        android:textSize="30sp"
        android:layout_below="@+id/meetingevent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/time"
        android:textSize="30sp"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/venue"
        android:textSize="30sp"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:id="@+id/description"
        android:textSize="30sp"/>

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:id="@+id/delete"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/description"
        android:layout_alignEnd="@+id/description"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:text="@string/editparticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/delete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="66dp"
        android:layout_marginEnd="66dp"
        android:id="@+id/editparticipants" />

    <Button
        android:text="@string/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editparticipants"
        android:layout_toRightOf="@+id/delete"
        android:layout_toEndOf="@+id/delete"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:id="@+id/button2" />


</RelativeLayout>