<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:text="@string/create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createevent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="20"
        android:height="20px"
        android:id="@+id/descedit"
        android:layout_above="@+id/createevent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:textSize="30sp"
        android:layout_above="@+id/descedit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp" />

    <TextView
        android:text="@string/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/venue"
        android:textSize="30sp"
        android:layout_above="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />


    <TextView
        android:text="@string/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="21dp"
        android:id="@+id/eventName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="20"
        android:id="@+id/venueedit"
        android:layout_alignTop="@+id/venue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/description"
        android:layout_toEndOf="@+id/description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/eventNameedit"
        android:layout_alignBaseline="@+id/eventName"
        android:layout_alignBottom="@+id/eventName"
        android:layout_toRightOf="@+id/description"
        android:layout_toEndOf="@+id/description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/dateedit"
        android:layout_below="@+id/eventNameedit"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/eventNameedit"
        android:layout_marginTop="44dp" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:textSize="30sp"
        android:layout_alignTop="@+id/dateedit"
        android:layout_alignRight="@+id/time"
        android:layout_alignEnd="@+id/time" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="42dp"
        android:id="@+id/time"
        android:layout_above="@+id/venue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBottom="@+id/time"
        android:layout_alignLeft="@+id/dateedit"
        android:layout_alignStart="@+id/dateedit"
        android:id="@+id/timeedit" />


</RelativeLayout>